fix: modify login, product-list and services layout spacings

--- a/src/app/features/home/components/service-card/service-card.component.scss
+++ b/src/app/features/home/components/service-card/service-card.component.scss
@@ -1,4 +1,6 @@
 .service-card {
+  padding: 0px 16px;
+  box-shadow: none;
   &__title {
     font-size: 20px;
   }
