--- a/src/app/features/home/components/services/services.component.scss
+++ b/src/app/features/home/components/services/services.component.scss
@@ -1,10 +1,24 @@
+@import '../../../../../../node_modules/bootstrap/scss/functions';
+@import '../../../../../../node_modules/bootstrap/scss/variables';
+@import '../../../../../../node_modules/bootstrap/scss/mixins/breakpoints';
 .container {
   padding-top: 100px;
   padding-bottom: 50px;
+  .row > * {
+    margin-top: 1rem;
+    margin-bottom: 3rem;
+  }
+  .row > *:nth-last-child(-n + 1) {
+    margin-bottom: 0px;
+    margin-top: 0px;
+  }
 }
 
-.service-card {
-  &__title {
-    font-size: 20px;
+@include media-breakpoint-up(lg) {
+  .container {
+    .row > *:nth-last-child(-n + 2) {
+      margin-bottom: 0px;
+      margin-top: 0px;
+    }
   }
 }
