--- a/src/app/features/products/components/product-list/product-list.component.scss
+++ b/src/app/features/products/components/product-list/product-list.component.scss
@@ -1,13 +1,44 @@
+@import '../../../../../../node_modules/bootstrap/scss/functions';
+@import '../../../../../../node_modules/bootstrap/scss/variables';
+@import '../../../../../../node_modules/bootstrap/scss/mixins/breakpoints';
+
 .container {
   padding-top: 50px;
   padding-bottom: 50px;
+  .filter-card {
+    position: sticky;
+    // MEDIDA TOP NECESSÁRIA PARA O FILTER CARD NAO SER "ENGOLIDO" PELO NAVBAR
+    top: 80px;
+    &__title {
+      font-size: 18px;
+    }
+  }
+  .product-cards {
+    .row > * {
+      margin-bottom: 1rem;
+    }
+    .row > *:nth-last-child(-n + 1) {
+      margin-bottom: 0px;
+    }
+  }
 }
 
-.filter-card {
-  position: sticky;
-  // MEDIDA TOP NECESSÁRIA PARA O FILTER CARD NAO SER "ENGOLIDO" PELO NAVBAR
-  top: 80px;
-  &__title {
-    font-size: 18px;
+@include media-breakpoint-up(xl) {
+  .container {
+    .product-cards {
+      .row > *:nth-last-child(-n + 3) {
+        margin-bottom: 0px;
+      }
+    }
+  }
+}
+
+@include media-breakpoint-up(md) {
+  .container {
+    .product-cards {
+      .row > *:nth-last-child(-n + 2) {
+        margin-bottom: 0px;
+      }
+    }
   }
 }
